# qdmi_device_tutorial

./: CMakeLists.txt  README.md  pyproject.toml  sitecustomize.py
cmake/: ExternalDependencies.cmake  tutorial-qdmi-device-config.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  dependencies.md  development_guide.md  header.html  index.md  layout.xml  style.css
python/tutorial/qdmi/: __init__.py  __main__.py  _version.pyi
src/: CMakeLists.txt  tutorial_device.cpp
test/: CMakeLists.txt  test_tutorial_device.cpp
test/python/: test_init.py  test_main.py
