# Copyright (c) 2024 - 2025 Munich Quantum Software Stack Project
# All rights reserved.
#
# Licensed under the Apache License v2.0 with LLVM Exceptions (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# https://github.com/Munich-Quantum-Software-Stack/QDMI/blob/develop/LICENSE.md
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.
#
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

[build-system]
requires = ["scikit-build-core>=0.11.6"]
build-backend = "scikit_build_core.build"

[project]
name = "tutorial-qdmi"
version = "0.1.0"
requires-python = ">=3.10"

description = "Implementation of a tutorial QDMI device"
readme = "README.md"
authors = [
  { name = "John Doe", email = "john.doe@example.com" },
  { name = "Jane Smith", email = "jane.smith@example.com" }
]

license = "Apache-2.0"
license-files = ["LICENSE.md"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: C++",
  "Programming Language :: Python",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/tutorial-org/tutorial-qdmi"
Issues = "https://github.com/tutorial-org/tutorial-qdmi/issues"
Discussions = "https://github.com/tutorial-org/tutorial-qdmi/discussions"

[project.scripts]
tutorial-qdmi = "tutorial.qdmi.__main__:main"

[dependency-groups]
test = [
  "pytest>=9.0.1",
  "pytest-console-scripts>=1.4.1",
  "pytest-cov>=7.0.0",
  "pytest-sugar>=1.1.1",
  "pytest-xdist>=3.8.0",
]
dev = [
  {include-group = "test"},
  "nox>=2025.11.12",
  "ty==0.0.17",
]


[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = "CMakeLists.txt"
ninja.make-fallback = true
build-dir = "build/{wheel_tag}/{build_type}"
build.targets = ["tutorial-qdmi-device"]
wheel.py-api = "py310"
wheel.expand-macos-universal-tags = true
wheel.packages = ["python/tutorial"]
wheel.install-dir = "tutorial/qdmi/data"

sdist.include = ["python/tutorial/qdmi/_version.py"]
sdist.exclude = [
  "**/docs",
  "**/test",
  "sitecustomize.py",
  ".*",
]

[tool.scikit-build.cmake.define]
BUILD_tutorial_QDMI_DOCS = "OFF"
BUILD_tutorial_QDMI_TESTS = "OFF"

[[tool.scikit-build.generate]]
path = "tutorial/qdmi/_version.py"
template = '''
version = "${version}"
'''


[tool.pytest]
minversion = "9.0"
strict = true
addopts = [
  "-ra",
  "--numprocesses=auto", # Automatically use all available CPU cores for parallel testing
]
filterwarnings = [
  "error",
]
log_level = "INFO"
testpaths = ["test/python"]


[tool.coverage]
run.source = ["tutorial.qdmi"]
run.disable_warnings = [
  "no-sysmon",
]
report.exclude_also = [
  '\.\.\.',
  'if TYPE_CHECKING:',
  'raise AssertionError',
  'raise NotImplementedError',
  'def __dir__()',  # Ignore __dir__ method that exists mainly for better IDE support
  '@overload'  # Overloads are only for static typing
]


[tool.ruff]
line-length = 120
namespace-packages = ["tutorial"]
preview = true
fix = true
unsafe-fixes = true
show-fixes = true
src = ["python"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "C90",     # <...> too complex
  "COM812",  # Conflicts with formatter
  "PLR09",   # Too many <...>
  "PLR2004", # Magic value used in comparison
  "RUF067",  # `__init__` module should only contain docstrings and re-exports
  "S101",    # Use of assert detected
  "S404",    # `subprocess` module is possibly insecure
  "TID252"   # Prefer absolute imports over relative imports from parent modules
]
future-annotations = true

[tool.ruff.lint.isort]
known-first-party = ["tutorial.qdmi"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"python/tutorial/qdmi/__main__.py" = ["T201"]
"test/python/**" = ["T20", "INP001"]


[tool.cibuildwheel]
build = "cp3*"
skip = ["cp313t-*"]
archs = "auto64"
test-groups = ["test"]
test-sources = ["test/python"]
test-command = "pytest test/python"
build-frontend = "build[uv]"
enable = ["cpython-freethreading"]
